--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "local-storage": "^2.0.0",
     "next": "9.5.1",
+    "next-env": "^1.1.1",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   }
